--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -145,18 +145,6 @@
     <Filter Include="Engine\GameObject\Item\Base">
       <UniqueIdentifier>{82afa0a0-bcc8-416a-bc3b-958bda2f0789}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\Item\Sword">
-      <UniqueIdentifier>{02622e5b-8de5-4bf3-8369-4f68dc5c415c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\Item\Sword\Base">
-      <UniqueIdentifier>{0af253e0-fbed-49e3-a96e-70d1416a03fb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\Item\Sword\ShortSword">
-      <UniqueIdentifier>{1b5e3b02-d6cd-4853-b8dc-614d06daac47}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\Item\Sword\GreatSword">
-      <UniqueIdentifier>{9a852402-2aff-4255-a81b-c12f30480202}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\Manager\UIMgr">
       <UniqueIdentifier>{83afd7ce-8953-4e3c-9d9c-6328e1cae70a}</UniqueIdentifier>
     </Filter>
@@ -322,9 +310,6 @@
     </Filter>
     <Filter Include="Engine\GameObject\Bullet\PlayerBullet\Base">
       <UniqueIdentifier>{59ec85a8-990d-4ed6-bd2b-554b4c795d02}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\Item\Lara%27sMagicWand">
-      <UniqueIdentifier>{ee480281-566b-4bcb-8f1e-90f39130653d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Engine\GameObject\Bullet\PlayerBullet\MagicWandBullet\AfterImage">
       <UniqueIdentifier>{9125bf6f-b822-4a5e-8a2e-9213b359925c}</UniqueIdentifier>
@@ -545,8 +530,29 @@
     <Filter Include="Engine\GameObject\UI\DungeonMapUI">
       <UniqueIdentifier>{67baa8f2-4141-4d27-9f59-58cca28f5b95}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\Item\CoinGatlingGun">
+    <Filter Include="Engine\GameObject\Item\Weapon">
+      <UniqueIdentifier>{02622e5b-8de5-4bf3-8369-4f68dc5c415c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Item\Weapon\Base">
+      <UniqueIdentifier>{0af253e0-fbed-49e3-a96e-70d1416a03fb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Item\Weapon\ShortSword">
+      <UniqueIdentifier>{1b5e3b02-d6cd-4853-b8dc-614d06daac47}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Item\Weapon\Lara%27sMagicWand">
+      <UniqueIdentifier>{ee480281-566b-4bcb-8f1e-90f39130653d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Item\Weapon\CoinGatlingGun">
       <UniqueIdentifier>{708cc1e1-79e8-40dc-b79d-a8c53cc5c6bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Bullet\PlayerBullet\CoinBullet">
+      <UniqueIdentifier>{733232bf-fdf6-44ee-af12-d44d8b7fd474}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\MapComponent\Chest">
+      <UniqueIdentifier>{38063e8f-e892-4895-970c-e7300be15832}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Scene\DungeonScene\Stage\Map\ChestMap">
+      <UniqueIdentifier>{66c7b0ef-9d73-40a5-9fea-631308d298a6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -676,14 +682,11 @@
     <ClInclude Include="Item.h">
       <Filter>Engine\GameObject\Item\Base</Filter>
     </ClInclude>
-    <ClInclude Include="Sword.h">
-      <Filter>Engine\GameObject\Item\Sword\Base</Filter>
+    <ClInclude Include="Weapon.h">
+      <Filter>Engine\GameObject\Item\Weapon\Base</Filter>
     </ClInclude>
     <ClInclude Include="ShortSword.h">
-      <Filter>Engine\GameObject\Item\Sword\ShortSword</Filter>
-    </ClInclude>
-    <ClInclude Include="GreatSword.h">
-      <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
+      <Filter>Engine\GameObject\Item\Weapon\ShortSword</Filter>
     </ClInclude>
     <ClInclude Include="IconUI.h">
       <Filter>Engine\GameObject\UI\ToolUI\IconUI</Filter>
@@ -800,7 +803,7 @@
       <Filter>Engine\GameObject\Bullet\PlayerBullet\MagicWandBullet</Filter>
     </ClInclude>
     <ClInclude Include="LaraMagicWand.h">
-      <Filter>Engine\GameObject\Item\Lara%27sMagicWand</Filter>
+      <Filter>Engine\GameObject\Item\Weapon\Lara%27sMagicWand</Filter>
     </ClInclude>
     <ClInclude Include="AfterImage.h">
       <Filter>Engine\GameObject\Bullet\PlayerBullet\MagicWandBullet\AfterImage</Filter>
@@ -983,7 +986,16 @@
       <Filter>Engine\GameObject\UI\DungeonMapUI</Filter>
     </ClInclude>
     <ClInclude Include="CoinGatlingGun.h">
-      <Filter>Engine\GameObject\Item\CoinGatlingGun</Filter>
+      <Filter>Engine\GameObject\Item\Weapon\CoinGatlingGun</Filter>
+    </ClInclude>
+    <ClInclude Include="CoinBullet.h">
+      <Filter>Engine\GameObject\Bullet\PlayerBullet\CoinBullet</Filter>
+    </ClInclude>
+    <ClInclude Include="Chest.h">
+      <Filter>Engine\GameObject\MapComponent\Chest</Filter>
+    </ClInclude>
+    <ClInclude Include="ChestMap.h">
+      <Filter>Engine\Scene\DungeonScene\Stage\Map\ChestMap</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1117,14 +1129,11 @@
     <ClCompile Include="Item.cpp">
       <Filter>Engine\GameObject\Item\Base</Filter>
     </ClCompile>
-    <ClCompile Include="Sword.cpp">
-      <Filter>Engine\GameObject\Item\Sword\Base</Filter>
+    <ClCompile Include="Weapon.cpp">
+      <Filter>Engine\GameObject\Item\Weapon\Base</Filter>
     </ClCompile>
     <ClCompile Include="ShortSword.cpp">
-      <Filter>Engine\GameObject\Item\Sword\ShortSword</Filter>
-    </ClCompile>
-    <ClCompile Include="GreatSword.cpp">
-      <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
+      <Filter>Engine\GameObject\Item\Weapon\ShortSword</Filter>
     </ClCompile>
     <ClCompile Include="IconUI.cpp">
       <Filter>Engine\GameObject\UI\ToolUI\IconUI</Filter>
@@ -1238,7 +1247,7 @@
       <Filter>Engine\GameObject\Bullet\PlayerBullet\MagicWandBullet</Filter>
     </ClCompile>
     <ClCompile Include="LaraMagicWand.cpp">
-      <Filter>Engine\GameObject\Item\Lara%27sMagicWand</Filter>
+      <Filter>Engine\GameObject\Item\Weapon\Lara%27sMagicWand</Filter>
     </ClCompile>
     <ClCompile Include="AfterImage.cpp">
       <Filter>Engine\GameObject\Bullet\PlayerBullet\MagicWandBullet\AfterImage</Filter>
@@ -1424,7 +1433,16 @@
       <Filter>Engine\GameObject\UI\DungeonMapUI</Filter>
     </ClCompile>
     <ClCompile Include="CoinGatlingGun.cpp">
-      <Filter>Engine\GameObject\Item\CoinGatlingGun</Filter>
+      <Filter>Engine\GameObject\Item\Weapon\CoinGatlingGun</Filter>
+    </ClCompile>
+    <ClCompile Include="CoinBullet.cpp">
+      <Filter>Engine\GameObject\Bullet\PlayerBullet\CoinBullet</Filter>
+    </ClCompile>
+    <ClCompile Include="Chest.cpp">
+      <Filter>Engine\GameObject\MapComponent\Chest</Filter>
+    </ClCompile>
+    <ClCompile Include="ChestMap.cpp">
+      <Filter>Engine\Scene\DungeonScene\Stage\Map\ChestMap</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
